Website update after a long time

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ Feel free to comment about anything you liked/disliked in the feedback tab right
 		<p class="more">A BIT MORE INFORMATION</p>
 		<div class="box">
 			<p>Apart from design &amp; developing, I enjoy taking part in various online cryptic hunts that taking place anywhere.
-I am a great team-player too, and I have a great sense of humor and thus a fun person to be around with.
-Although I am an introvert around strangers, I am way too much of an extrovert towards friends.</p>
+I am a great team-player too, and I have a great sense of humor (In my opinion :p) and thus a fun person to be around with.
+Although I am quite awkward around new people at first glance, but once we get to know each other, we can make really good friends.</p>
 		</div>
 		</section>
 		<section class="core">
