--- a/skills.html
+++ b/skills.html
@@ -87,8 +87,8 @@
 					<img src="images/icons/cpp.jpg">
 				</div>
 				<div class="icons" style="background-color:#bdc3c7">
-					<p><b>Objective-C<br></b><br><br><br>Novice</p>
-					<img src="images/icons/oc.jpg">
+					<p><b>Assembly<br></b><br><br><br>Novice</p>
+					<img src="images/icons/asm.png">
 				</div>
 				<div class="icons" style="background-color:#bdc3c7">
 					<p><b>Python<br></b><br><br><br>Experienced</p>
@@ -123,8 +123,8 @@
 					<img src="images/icons/php.jpg">
 				</div>
 				<div class="icons" style="background-color:#bdc3c7">
-					<p><b>Apple Swift<br></b><br><br><br>Intermediate</p>
-					<img src="images/icons/swift.jpg">
+					<p><b>Matlab<br></b><br><br><br>Intermediate</p>
+					<img src="images/icons/matlab.png">
 				</div>
 				<div class="icons" style="background-color:#bdc3c7">
 					<p><b>Android<br>Development</b><br><br><br>Intermediate</p>
