--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,11 @@
 		</section>
 		<section class="contact">
 				<div class="contactme">
-		<p>So you ultimately liked my profile (and website), and found my skills interesting? Maybe we can work together on something related to graphic design or development, or maybe you just want to talk to me just because I am an awesome person.
+		<p>Reach me out at any of the links below and we can get talking, I would really appreciate it. Maybe we can work together on something related to graphic design or development, or I can help you with some of my experience in the algorithmic side of programming.
 Whatever be the case, here are a few links to my social networking accounts that you may find useful.</p>
 		</div>
 			<div class="bubble" style="background-color: #e74c3c">
-			 <p>eMail</p>
+			 <p>Email</p>
 			 <a href="mailto:aayushaggarwal123@yahoo.co.in"><img src="images/email.png"></a>
 			</div>
 			<div class="bubble" style="background-color: #2ecc71">
