Added header animation in JS

--- a/about.html
+++ b/about.html
@@ -10,12 +10,7 @@
 	</head>
 	<body style="background-color: #ecf0f1">
 		<section class="slideshow">
-		<h2 class="name">AAYUSH AGGARWAL</h2>
-		  <div class="slide fade" id="s1"></div>
-		  <div class="slide fade" id="s2"></div>
-		  <div class="slide fade" id="s3"></div>
-		  <div class="slide fade" id="s4"></div>
-		  <div class="slide fade" id="s5"></div>
+		<canvas id="header_canvas" width="2000px" height="350px"></canvas>
 		  <script type="text/javascript" src="script.js"></script>
 			<section class="nav" id="n1">
 			<ul>
@@ -26,6 +21,7 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			</section>
+		<h2 class="name">AAYUSH AGGARWAL</h2>
 		</section>
 		<div class="about">
 			<img src="images/laptop.png" id="laptop">
