--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
 	</head>
 	<body>
 		<section class="slideshow">
-		<h2 class="name">AAYUSH AGGARWAL</h2>
-		  <div class="slide fade" id="s1"></div>
-		  <div class="slide fade" id="s2"></div>
-		  <div class="slide fade" id="s3"></div>
-		  <div class="slide fade" id="s4"></div>
-		  <div class="slide fade" id="s5"></div>
+			<canvas id="header_canvas" width="2000px" height="350px"></canvas>
 		  <script type="text/javascript" src="script.js"></script>
 			<section class="nav" id="n1">
 			<ul>
@@ -27,6 +22,7 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			</section>
+		<h2 class="name">AAYUSH AGGARWAL</h2>
 		</section>
 		<section class="intro">
 			<p class="hi"> Hello my friend...</p>
