--- a/skills.html
+++ b/skills.html
@@ -9,12 +9,7 @@
 	</head>
 	<body>
 		<section class="slideshow">
-		<h2 class="name">AAYUSH AGGARWAL</h2>
-		  <div class="slide fade" id="s1"></div>
-		  <div class="slide fade" id="s2"></div>
-		  <div class="slide fade" id="s3"></div>
-		  <div class="slide fade" id="s4"></div>
-		  <div class="slide fade" id="s5"></div>
+		<canvas id="header_canvas" width="2000px" height="350px"></canvas>
 		  <script type="text/javascript" src="script.js"></script>
 			<section class="nav" id="n1">
 			<ul>
@@ -25,6 +20,7 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			</section>
+		<h2 class="name">AAYUSH AGGARWAL</h2>
 		</section>
 		<section class="skillcon design" style="background: linear-gradient(230deg,#8e44ad,#d35400,#bdc3c7,#27ae60,#16a085,#c0392b)">
 			<h1> Design &amp; Creativity</h1>
