--- a/skills.html
+++ b/skills.html
@@ -36,15 +36,15 @@
 				<div class="icons" style="background-color:#f1c40f">
 					<p><b>Adobe<br>Illustrator</b><br><br><br>Fairly Good</p>
 					<img src="images/icons/ai.jpg">
-				</div>	
-				<div class="icons" style="background-color:#f1c40f">
-					<p><b>Sony<br>Vegas</b><br><br><br>Fairly Good</p>
-					<img src="images/icons/vegas.jpg">
 				</div>		
 				<div class="icons" style="background-color:#f1c40f">
 					<p><b>Adobe<br>PhotoShop</b><br><br><br>Fairly Good</p>
 					<img src="images/icons/ps.jpg">
 				</div>
+				<div class="icons" style="background-color:#f1c40f">
+					<p><b>Sony<br>Vegas</b><br><br><br>Fairly Good</p>
+					<img src="images/icons/vegas.jpg">
+				</div>	
 				<div class="icons" style="background-color:#f1c40f">
 					<p><b>Apple<br>Final Cut Pro</b><br><br><br>Fairly Good</p>
 					<img src="images/icons/fcp.jpg">
@@ -70,8 +70,8 @@
 					<img src="images/icons/3ds.jpg">
 				</div>
 				<div class="icons" style="background-color:#f1c40f">
-					<p><b>Web Design on<br>Adobe Muse</b><br><br><br>Experienced</p>
-					<img src="images/icons/webd.jpg">
+					<p><b>Audacity<br></b><br><br><br>Fairly Good</p>
+					<img src="images/icons/audacity.png">
 				</div>
 			</div>
 		</section>
