--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 			<div class="boardtext" >
 			<p class="anintro">An Introduction</p>
 			<img src="images/seperator.png">
-			<p>I am a 2<sup>nd</sup> year computer science student at IIITD, having previously studied at DPS Dwarka. Passionate about computer science and technology,  I always try to learn new things in my free time, mostly related to technology. I was quite interested in graphic design during my school days, and after joinging college I started competitive programming to learn some essentails of algorithmics.
+			<p>I am a final year computer science student at IIITD, having previously studied at DPS Dwarka. Passionate about computer science and technology,  I always try to learn new things in my free time, mostly related to technology. I was quite interested in graphic design during my school days, and after joinging college I started competitive programming to learn some essentails of algorithmics.
 Nowadays I am starting off with open source development since it looks very interesting that I can put both my designing and programming knowledge into one place.</p>
 			</div>
 		</div>
