--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
 			<section class="nav" id="n1">
 			<ul>
 				<li><a href="index.html">Home</b></a></li>
-				<li><a href="about.html">About</a></li>
+				<!-- <li><a href="about.html">About</a></li> -->
 				<li><a href="assets/CV.pdf">R&eacute;sum&eacute;</a></li>
-				<li><a href="skills.html">Skills</a></li>
+				<!-- <li><a href="skills.html">Skills</a></li> -->
 				<li><a href="#" class="active">Contact</a></li>
 			</ul>
 			</section>
@@ -24,7 +24,7 @@
 		</section>
 		<section class="contact">
 				<div class="contactme">
-		<p>Reach me out at any of the links below and we can get talking, I would really appreciate it. Maybe we can work together on something related to graphic design or development, or I can help you with some of my experience in the algorithmic side of programming.
+		<p>Reach me out at any of the links below and we can get talking, I would really appreciate it. Maybe we can work together on something related to graphic design or programming, or maybe we can just chat about anything under the sun!
 Whatever be the case, here are a few links to my social networking accounts that you may find useful.</p>
 		</div>
 			<div class="bubble" style="background-color: #e74c3c">
