--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 			<section class="nav" id="n1">
 			<ul>
 				<li><a href="#" class="active">Home</b></a></li>
-				<li><a href="about.html">About</a></li>
+				<!-- <li><a href="about.html">About</a></li> -->
 				<li><a href="assets/CV.pdf">R&eacute;sum&eacute;</a></li>
-				<li><a href="skills.html">Skills</a></li>
+				<!-- <li><a href="skills.html">Skills</a></li> -->
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			</section>
@@ -27,7 +27,7 @@
 		<section class="intro">
 			<p class="hi"> Hello my friend...</p>
 			<img src="images/slit.png">
-			<p class="hitext" style="margin-top: -15px; margin-bottom: 10px;">Welcome to my personal website! My name is  Aayush Aggarwal, and I am going to take you to a tour through most of my skills, areas of interest, specialties, and hobbies. If you like any of my work/skill, feel free to contact me and we may even work together on a project, be it small, big or world-changing.
+			<p class="hitext" style="margin-top: -15px; margin-bottom: 10px;">Welcome to my personal website! I am  Aayush Aggarwal, a final year undergraudate student at IIIT Delhi. I used to work on graphic design as part of my computer club at school, DPS Dwarka, and lately I have beome interested in mathematics and algorithms. If you like any of my work/skill, feel free to contact me and we may even work together on a project, be it however small or big.
 Without wasting any more time, I am gonna stop right here for you to explore this (tiny) website of mine (really hope you like it), and start getting to know me.
 Feel free to comment about anything you liked/disliked in the feedback tab right at the bottom of the page.</p>
 		</section>
@@ -44,7 +44,7 @@ Feel free to comment about anything you liked/disliked in the feedback tab right
 		<div class="box">
 			<p>Apart from design &amp; developing, I enjoy taking part in various online cryptic hunts that taking place anywhere.
 I am a great team-player too, and I have a great sense of humor (In my opinion :p) and thus a fun person to be around with.
-Although I am quite awkward around new people at first glance, but once we get to know each other, we can make really good friends.</p>
+Although I often feel shy around new people at first glance, but once we get to know each other, we can make really good friends.</p>
 		</div>
 		</section>
 		<section class="core">
